--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 
     <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1,maximum-scale=1,minimum-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>尘埃·落定</title>
-    <meta name="keywords" content="尘埃·落定">
+    <title>大美一高</title>
+    <meta name="keywords" content="大美一高">
     <meta name="description" content="我要这天，再遮不住我的眼；要这地，再埋不了我的心。">
     <link rel="shortcut icon" href="https://gitee.com/zhou41699/alist-readme/raw/master/QQ%E5%9B%BE%E7%89%8720220130173208.jpg" type="image/x-icon">
     <link rel="stylesheet" href="./font.min.css">
@@ -24,8 +24,10 @@
         <div class="content content-intro">
             <div class="content-inner" style="background: unset;"><canvas id="background" width="1366" height="648"></canvas>
                 <div class="wrap fade in">
-                    <h2 class="content-title">尘埃·落定</h2>
+                    <h2 class="content-title">大美一高</h2>
                     <h3 class="content-subtitle" original-content="我本无心，奈何命运。我若有心，命运奈何？"><span>我</span><span>本</span><span>无</span><span>心</span><span>，</span><span>奈</span><span>何</span><span>命</span><span>运</span><span>。</span><span>我</span><span>若</span><span>有</span><span>心</span><span>，</span><span>命</span><span>运</span><span>奈</span><span>何</span><span>？</span></h3>
+                    <a class="enter" href="https://blog.ylyg.ml/">博客</a>
+                    <a class="enter" href="https://om.ylyg.ml/"><b>网盘资源(om)</b></a>
                 </div>
                 <div id="signature" data-translate="signature" original-content="Thinking &amp; Almost there &amp; Forget it" style="width: 100vw;height: 100vh;">
                     <svg class="shape" preserveAspectRatio="none" viewBox="0 0 1440 800" xmlns:pathdata="http://www.codrops.com/" style="fill: rgb(30, 31, 33);">
