--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1,maximum-scale=1,minimum-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>大美一高</title>
-    <meta name="keywords" content="大美一高">
+    <meta name="keywords" content="大美一高导航">
     <meta name="description" content="我要这天，再遮不住我的眼；要这地，再埋不了我的心。">
     <link rel="shortcut icon" href="https://gitee.com/zhou41699/alist-readme/raw/master/QQ%E5%9B%BE%E7%89%8720220130173208.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="./font.min.css">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="https://gitee.com/zhou41699/alist-readme/raw/master/font.min.css">
+    <link rel="stylesheet" href="https://gitee.com/zhou41699/alist-readme/raw/master/style.css">
     <style>
         hcfy-result.__hcfy__result__loaded__.__hcfy__result__both__ {
             border: 1px dotted
@@ -24,10 +24,10 @@
         <div class="content content-intro">
             <div class="content-inner" style="background: unset;"><canvas id="background" width="1366" height="648"></canvas>
                 <div class="wrap fade in">
-                    <h2 class="content-title">大美一高</h2>
+                    <h2 class="content-title">大美一高导航</h2>
                     <h3 class="content-subtitle" original-content="我本无心，奈何命运。我若有心，命运奈何？"><span>我</span><span>本</span><span>无</span><span>心</span><span>，</span><span>奈</span><span>何</span><span>命</span><span>运</span><span>。</span><span>我</span><span>若</span><span>有</span><span>心</span><span>，</span><span>命</span><span>运</span><span>奈</span><span>何</span><span>？</span></h3>
                     <a class="enter" href="https://blog.ylyg.ml/">博客</a>
-                    <a class="enter" href="https://om.ylyg.ml/"><b>网盘资源(om)</b></a>
+                    <a class="enter" href="https://al.ylyg.ml/"><b>网盘资源(alist)</b></a>
                 </div>
                 <div id="signature" data-translate="signature" original-content="Thinking &amp; Almost there &amp; Forget it" style="width: 100vw;height: 100vh;">
                     <svg class="shape" preserveAspectRatio="none" viewBox="0 0 1440 800" xmlns:pathdata="http://www.codrops.com/" style="fill: rgb(30, 31, 33);">
@@ -35,9 +35,9 @@
                 </div>
             </div>
         </div>
-        <script src="./anime.min.js.下载"></script>
-        <script src="./index.js.下载"></script>
-        <script src="./background.js.下载"></script>
+        <script src="https://gitee.com/zhou41699/alist-readme/raw/master/anime.min.js"></script>
+        <script src="https://gitee.com/zhou41699/alist-readme/raw/master/index.js"></script>
+        <script src="https://gitee.com/zhou41699/alist-readme/raw/master/background.js"></script>
     </main>
 
 
